--- a/Students-Problems/20231017/Logistic_Regression.ipynb
+++ b/Students-Problems/20231017/Logistic_Regression.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -30,99 +30,7 @@
         "id": "Z3LUtcxwZ7GQ",
         "outputId": "244ba214-a562-4663-8a5a-830dffcf2f39"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>treatment</th>\n",
-              "      <th>Sex</th>\n",
-              "      <th>Age_years</th>\n",
-              "      <th>Diet</th>\n",
-              "      <th>Smoking</th>\n",
-              "      <th>Response_to_treatment</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   treatment   Sex  Age_years  Diet  Smoking  Response_to_treatment\n",
-              "0           0    1          1     1        1                      0\n",
-              "1           0    0          1     0        1                      0\n",
-              "2           0    0          1     1        1                      0\n",
-              "3           0    0          1     1        1                      0\n",
-              "4           0    0          0     0        0                      1"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "df = pd.read_excel('Drug_Data.xlsx', sheet_name= 'Sheet1')\n",
@@ -131,7 +39,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "clean_names = list()\n",
+        "for field in df.columns:\n",
+        "    clean_names.append(field.rstrip())\n",
+        "\n",
+        "df.columns = clean_names"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -140,13 +61,13 @@
         "df['Bias'] = 1\n",
         "\n",
         "# Define the feature matrix (X) and target variable (y)\n",
-        "X = df[['Bias', 'Sex', 'Age_years', 'Diet', 'Smoking']]\n",
+        "X = df[['Bias', 'Sex', 'Age_years', 'Diet', 'Smoking', 'treatment']]\n",
         "y = df[['Response_to_treatment']]\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -154,8 +75,8 @@
           "output_type": "stream",
           "text": [
             "Optimization terminated successfully.\n",
-            "         Current function value: 0.366465\n",
-            "         Iterations 7\n"
+            "         Current function value: 0.361172\n",
+            "         Iterations 8\n"
           ]
         }
       ],
@@ -168,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -178,42 +99,46 @@
             "                             Logit Regression Results                            \n",
             "=================================================================================\n",
             "Dep. Variable:     Response_to_treatment   No. Observations:                   30\n",
-            "Model:                             Logit   Df Residuals:                       25\n",
-            "Method:                              MLE   Df Model:                            4\n",
-            "Date:                   Tue, 17 Oct 2023   Pseudo R-squ.:                  0.4644\n",
-            "Time:                           13:43:26   Log-Likelihood:                -10.994\n",
+            "Model:                             Logit   Df Residuals:                       24\n",
+            "Method:                              MLE   Df Model:                            5\n",
+            "Date:                   Wed, 18 Oct 2023   Pseudo R-squ.:                  0.4722\n",
+            "Time:                           10:29:02   Log-Likelihood:                -10.835\n",
             "converged:                          True   LL-Null:                       -20.527\n",
-            "Covariance Type:               nonrobust   LLR p-value:                 0.0007628\n",
+            "Covariance Type:               nonrobust   LLR p-value:                  0.001630\n",
             "==============================================================================\n",
             "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
             "------------------------------------------------------------------------------\n",
-            "Bias           2.2108      1.231      1.796      0.072      -0.202       4.624\n",
-            "Sex            2.8582      1.406      2.033      0.042       0.103       5.613\n",
-            "Age_years     -1.3373      1.102     -1.214      0.225      -3.496       0.822\n",
-            "Diet          -1.6492      1.126     -1.465      0.143      -3.856       0.557\n",
-            "Smoking       -3.0138      1.418     -2.126      0.034      -5.793      -0.235\n",
+            "Bias           2.9452      1.889      1.559      0.119      -0.757       6.647\n",
+            "Sex            3.1735      1.566      2.026      0.043       0.104       6.243\n",
+            "Age_years     -1.6794      1.287     -1.305      0.192      -4.201       0.842\n",
+            "Diet          -1.8807      1.224     -1.536      0.124      -4.280       0.518\n",
+            "Smoking       -3.4028      1.648     -2.065      0.039      -6.633      -0.173\n",
+            "treatment     -0.7453      1.347     -0.554      0.580      -3.384       1.894\n",
             "==============================================================================\n",
             "Coefficients (Weights):\n",
-            "Bias         2.210837\n",
-            "Sex          2.858202\n",
-            "Age_years   -1.337337\n",
-            "Diet        -1.649230\n",
-            "Smoking     -3.013812\n",
+            "Bias         2.945177\n",
+            "Sex          3.173531\n",
+            "Age_years   -1.679389\n",
+            "Diet        -1.880708\n",
+            "Smoking     -3.402845\n",
+            "treatment   -0.745334\n",
             "dtype: float64\n",
             "Odds Ratios:\n",
-            "Bias          9.123351\n",
-            "Sex          17.430163\n",
-            "Age_years     0.262544\n",
-            "Diet          0.192198\n",
-            "Smoking       0.049104\n",
+            "Bias         19.014030\n",
+            "Sex          23.891709\n",
+            "Age_years     0.186488\n",
+            "Diet          0.152482\n",
+            "Smoking       0.033278\n",
+            "treatment     0.474576\n",
             "dtype: float64\n",
             "Confidence Intervals for Odds Ratios (95%):\n",
             "              Lower       Upper\n",
-            "Bias       0.817189  101.855908\n",
-            "Sex        1.108343  274.112406\n",
-            "Age_years  0.030308    2.274305\n",
-            "Diet       0.021157    1.745985\n",
-            "Smoking    0.003049    0.790764\n"
+            "Bias       0.469116  770.669630\n",
+            "Sex        1.109696  514.387708\n",
+            "Age_years  0.014981    2.321532\n",
+            "Diet       0.013844    1.679519\n",
+            "Smoking    0.001317    0.841055\n",
+            "treatment  0.033894    6.644823\n"
           ]
         }
       ],
@@ -244,6 +169,13 @@
         "print(\"Confidence Intervals for Odds Ratios (95%):\")\n",
         "print(conf_intervals)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
