--- a/Students-Problems/20231017/Logistic_Regression.ipynb
+++ b/Students-Problems/20231017/Logistic_Regression.ipynb
@@ -172,10 +172,47 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "treatment                int64\n",
+              "Sex                      int64\n",
+              "Age_years                int64\n",
+              "Diet                     int64\n",
+              "Smoking                  int64\n",
+              "Response_to_treatment    int64\n",
+              "Bias                     int64\n",
+              "dtype: object"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
+        }
+      ],
+      "source": [
+        "df.dtypes"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "result."
+      ]
     }
   ],
   "metadata": {
